Fix word break in product descriptions

--- a/source/stylesheets/product.css.sass
+++ b/source/stylesheets/product.css.sass
@@ -113,6 +113,7 @@ button.reset-selection-button
 .product-description
   margin: 50px 0
   max-width: 600px
+  word-break: break-word
   width: 100%
 
   @media screen and (max-width: $break-medium)
